--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -188,7 +188,7 @@
             &.sprint {
               background: @admin-green;
             }
-            &.product {
+            &.project {
               background: @roadmunk-orange;
             }
             &.release {
