--- a/views/features.ejs
+++ b/views/features.ejs
@@ -1,145 +1,147 @@
-<article>
-	<section class="section blue section-short top-header has-top">
-		<div class="background-media"></div>
-		<div class="background-overlay"></div>
-		<div class="container-fluid">
-			<header class="section-header small text-center underline">
-				<h1 class="headline text-medium hairline xsmall-margin-bottom">Pick Your Roadmap View</h1>
-			</header>
-			<div class="row">
-				<div class="col-lg-8 image-row center">
-					<div class="col-lg-6 text-center">
-						<h3 class="text-small thin xsmall-margin-bottom">Timeline</h3>
-						<img src="/images/timeline.png">
+<div class="features">
+	<article>
+		<section class="section blue section-short top-header has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container-fluid">
+				<header class="section-header small text-center underline">
+					<h1 class="headline text-medium hairline xsmall-margin-bottom">Pick Your Roadmap View</h1>
+				</header>
+				<div class="row">
+					<div class="col-lg-8 image-row center">
+						<div class="col-lg-6 text-center">
+							<h3 class="text-small thin xsmall-margin-bottom">Timeline</h3>
+							<img src="/images/timeline.png">
+						</div>
+						<div class="col-lg-6 text-center">
+							<h3 class="text-small thin xsmall-margin-bottom">Swimlane</h3>
+							<img src="/images/swimlane.png">
+						</div>
 					</div>
-					<div class="col-lg-6 text-center">
-						<h3 class="text-small thin xsmall-margin-bottom">Swimlane</h3>
-						<img src="/images/swimlane.png">
+				</div>
+				<div class="row small-margin-top">
+					<div class="col-md-5 center text-center subheader">
+						<h4 class="normal">Create your roadmap in just a few minutes. Using our drag and drop tools, you can add and organize items from any view, organize headers and apply custom layout options.</h4>
 					</div>
 				</div>
 			</div>
-			<div class="row small-margin-top">
-				<div class="col-md-5 center text-center subheader">
-					<h4 class="normal">Create your roadmap in just a few minutes. Using our drag and drop tools, you can add and organize items from any view, organize headers and apply custom layout options.</h4>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="section white section-normal has-top">
-		<!--<div class="decor-top">
-			<% include bottom-triangle-angle %>
-		</div>-->
-		<div class="background-media"></div>
-		<div class="background-overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-10 center">
-					<div id="feature_1_text" class="col-md-5 transparent">
-						<header class="small-header text-left">
-							<h1 class="headline text-small hairline">Color Palettes and Branding</h1>
-							<p class="body-subheader">Create stunning visualizations by applying designer or newly created palettes to your roadmap and give the deepest impact to your audience.</p>
-						</header>
-					</div>
-					<div id="feature_1_img" class="col-md-6 right text-right transparent">
-						<img src="/images/designer-colors.png">
+		</section>
+		<section class="section white section-normal has-top">
+			<!--<div class="decor-top">
+				<% include bottom-triangle-angle %>
+			</div>-->
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-10 center">
+						<div id="feature_1_text" class="col-md-5 transparent">
+							<header class="small-header text-left">
+								<h1 class="headline text-small hairline underline features-left">Color Palettes and Branding</h1>
+								<p class="body-subheader features">Create stunning visualizations by applying designer or newly created palettes to your roadmap and give the deepest impact to your audience.</p>
+							</header>
+						</div>
+						<div id="feature_1_img" class="col-md-6 right text-right transparent">
+							<img src="/images/color-palette.png">
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</section>
-	<section class="section grey section-normal has-top">
-		<div class="background-media"></div>
-		<div class="background-overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-10 center">
-					<div id="feature_2_img" class="col-md-6 text-left transparent">
-						<img src="http://placehold.it/500x300">
-					</div>
-					<div id="feature_2_text" class="col-md-5 right transparent">
-						<header class="small-header text-left">
-							<h1 class="headline text-small hairline">Fit To Powerpoint</h1>
-							<p class="body-subheader">There is no need to move pixels on slides with our direct export to presentation formats. Select your aspect ratio (4:3, 16:9, 16:10) and download your roadmap in a presentation ready format (PPT, PNG, PDF, HTML).</p>
-						</header>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="section white section-normal has-top">
-		<div class="background-media"></div>
-		<div class="background-overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-10 center">
-					<div id="feature_3_text" class="col-md-5 transparent">
-						<header class="small-header text-left">
-							<h1 class="headline text-small hairline">Share your Roadmap as a URL</h1>
-							<p class="body-subheader">Let your audience get the latest status and details by interacting with an HTML version of the roadmap view published as a private URL.</p>
-						</header>
-					</div>
-					<div id="feature_3_img" class="col-md-6 right text-right transparent">
-						<img src="http://placehold.it/500x300">
+		</section>
+		<section class="section grey section-normal has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-10 center">
+						<div id="feature_2_img" class="col-md-6 text-left transparent">
+							<img src="http://placehold.it/500x300">
+						</div>
+						<div id="feature_2_text" class="col-md-5 right transparent">
+							<header class="small-header text-left">
+								<h1 class="headline text-small hairline">Fit To Powerpoint</h1>
+								<p class="body-subheader features">There is no need to move pixels on slides with our direct export to presentation formats. Select your aspect ratio (4:3, 16:9, 16:10) and download your roadmap in a presentation ready format (PPT, PNG, PDF, HTML).</p>
+							</header>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</section>
-	<section class="section grey section-normal has-top">
-		<div class="background-media"></div>
-		<div class="background-overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-10 center">
-					<div id="feature_4_img" class="col-md-6 text-left transparent">
-						<img src="/images/unlimited-views.png">
-					</div>
-					<div id="feature_4_text" class="col-md-5 right transparent">
-						<header class="small-header text-left">
-							<h1 class="headline text-small hairline">One Data Set, Unlimited Views</h1>
-							<p class="body-subheader">We understand that audiences like sales, engineering and executives need different degrees of granularity and information. By creating additional views, showcase the content thats relevant for a specific audience, all from the same data set. </p>
-						</header>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="section white section-normal has-top">
-		<div class="background-media"></div>
-		<div class="background-overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-10 center">
-					<div id="feature_5_text" class="col-md-5 transparent">
-						<header class="small-header text-left">
-							<h1 class="headline text-small hairline">Print to A4 &#38; Legal</h1>
-							<p class="body-subheader">Let us help you prepare for those important roadmap meetings by creating printer friendly versions of your roadmap. </p>
-						</header>
-					</div>
-					<div id="feature_5_img" class="col-md-6 right text-right transparent">
-						<img src="http://placehold.it/500x300">
+		</section>
+		<section class="section white section-normal has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-10 center">
+						<div id="feature_3_text" class="col-md-5 transparent">
+							<header class="small-header text-left">
+								<h1 class="headline text-small hairline">Share your Roadmap as a URL</h1>
+								<p class="body-subheader features">Let your audience get the latest status and details by interacting with an HTML version of the roadmap view published as a private URL.</p>
+							</header>
+						</div>
+						<div id="feature_3_img" class="col-md-6 right text-right transparent">
+							<img src="http://placehold.it/500x300">
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</section>
-	<section class="section grey section-normal has-top">
-		<div class="background-media"></div>
-		<div class="background-overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-10 center">
-					<div id="feature_6_img" class="col-md-6 text-left transparent">
-						<img src="/images/table.png">
-					</div>
-					<div id="feature_6_text" class="col-md-5 right transparent">
-						<header class="small-header text-left">
-							<h1 class="headline text-small hairline">Idea Management</h1>
-							<p class="body-subheader">Create or import roadmap items directly into your table view. Quickly sort, filter, and prioritize roadmap items using the fastest and sleekest new UI technologies.</p>
-						</header>
+		</section>
+		<section class="section grey section-normal has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-10 center">
+						<div id="feature_4_img" class="col-md-6 text-left transparent">
+							<img src="/images/unlimited-views.png">
+						</div>
+						<div id="feature_4_text" class="col-md-5 right transparent">
+							<header class="small-header text-left">
+								<h1 class="headline text-small hairline">One Data Set, Unlimited Views</h1>
+								<p class="body-subheader features">We understand that audiences like sales, engineering and executives need different degrees of granularity and information. By creating additional views, showcase the content thats relevant for a specific audience, all from the same data set. </p>
+							</header>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</section>
-</article>
+		</section>
+		<section class="section white section-normal has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-10 center">
+						<div id="feature_5_text" class="col-md-5 transparent">
+							<header class="small-header text-left">
+								<h1 class="headline text-small hairline">Print to A4 &#38; Legal</h1>
+								<p class="body-subheader features">Let us help you prepare for those important roadmap meetings by creating printer friendly versions of your roadmap. </p>
+							</header>
+						</div>
+						<div id="feature_5_img" class="col-md-6 right text-right transparent">
+							<img src="http://placehold.it/500x300">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="section grey section-normal has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-10 center">
+						<div id="feature_6_img" class="col-md-6 text-left transparent">
+							<img src="/images/table.png">
+						</div>
+						<div id="feature_6_text" class="col-md-5 right transparent">
+							<header class="small-header text-left">
+								<h1 class="headline text-small hairline">Idea Management</h1>
+								<p class="body-subheader features">Create or import roadmap items directly into your table view. Quickly sort, filter, and prioritize roadmap items using the fastest and sleekest new UI technologies.</p>
+							</header>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+	</article>
+</div>
