--- a/views/home.ejs
+++ b/views/home.ejs
@@ -132,7 +132,7 @@
 							<img class="bg" src="/images/browser-roadmunk.jpg">
 							<!--<p class="url">https://app.roadmunk.com</p>-->
 							<img id="sprintImg" class="screen selected-img" src="/images/sprint-roadmap.png">
-							<img id="productImg" class="screen" src="/images/product-roadmap.png">
+							<img id="projectImg" class="screen" src="/images/product-roadmap.png">
 							<img id="releaseImg" class="screen" src="/images/release-roadmap.png">
 						</div>
 					</div>
@@ -149,13 +149,13 @@
 									</span>
 								</a>
 							</li>
-							<li id="product">
+							<li id="project">
 								<span>
-									<div class="roadmap-icon product">
+									<div class="roadmap-icon project">
 										<span class="glyphicon glyphicon-briefcase"></span>
 									</div>
 									<span class="info">
-										<h3>Product Roadmap</h3>
+										<h3>Project Roadmap</h3>
 										<p class="callout">Provide vital status updates to your stakeholders</p>
 									</span>
 								</a>
