Fixed border issue

--- a/views/features.ejs
+++ b/views/features.ejs
@@ -1,4 +1,4 @@
-<div class="features">
+<div class="features-page">
 	<article>
 		<section class="section blue section-short top-header has-top">
 			<div class="background-media"></div>
