--- a/views/features.ejs
+++ b/views/features.ejs
@@ -37,7 +37,7 @@
 					<div class="col-md-10 center">
 						<div id="feature_1_text" class="col-md-5 transparent">
 							<header class="small-header text-left">
-								<h1 class="headline text-small hairline underline features-left">Color Palettes and Branding</h1>
+								<h1 class="headline text-small hairline">Color Palettes and Branding</h1>
 								<p class="body-subheader features">Create stunning visualizations by applying designer or newly created palettes to your roadmap and give the deepest impact to your audience.</p>
 							</header>
 						</div>
@@ -55,7 +55,7 @@
 				<div class="row">
 					<div class="col-md-10 center">
 						<div id="feature_2_img" class="col-md-6 text-left transparent">
-							<img src="http://placehold.it/500x300">
+							<img src="/images/publish-export-cs.png">
 						</div>
 						<div id="feature_2_text" class="col-md-5 right transparent">
 							<header class="small-header text-left">
@@ -80,7 +80,7 @@
 							</header>
 						</div>
 						<div id="feature_3_img" class="col-md-6 right text-right transparent">
-							<img src="http://placehold.it/500x300">
+							<img src="/images/publish-to-url.png">
 						</div>
 					</div>
 				</div>
@@ -118,7 +118,7 @@
 							</header>
 						</div>
 						<div id="feature_5_img" class="col-md-6 right text-right transparent">
-							<img src="http://placehold.it/500x300">
+							<img src="/images/publish-print-cs.png">
 						</div>
 					</div>
 				</div>
