--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -9,7 +9,7 @@
 		<div class="background-overlay"></div>
 		<div class="container">
 			<header class="small-header text-left underline underline-left">
-				<h1 class="headline text-small hairline">See Roadmunk In Action</h1>
+				<h1 class="text-small hairline">See Roadmunk In Action</h1>
 			</header>
 			<div class="row">
 				<span class="col-md-5 text-left subheader">
