--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -12,6 +12,6 @@
 	<script src="/javascripts/features.js"></script>
 <% } else if (content == "home") { %>
 	<!--<script src="/javascripts/home.js"></script>-->
-<% } else if (content == "blog") { %>
-	<% include commentcount %>
+<% } else if (content == "pricing") { %>
+	<script src="/javascripts/pricing.js"></script>
 <% } %>
