--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -5,6 +5,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+img.blur {
+    -webkit-filter : blur(3px) !important;
+    filter: blur(3px) !important;
+}
 p.callout {
     color: #717171;
 }
@@ -128,6 +132,40 @@ a:link {
     color: @white;
 }
 
+.container {
+    .small-header {
+      position       : relative;
+      border-bottom  : 0;
+      padding-bottom : 0;
+      max-width      : 100%;
+      margin         : 0 auto 30px;
+      z-index        : 4;
+      font-size      : 18px;
+      h1 {
+        font-weight: 400;
+      }
+    }
+    .row {
+        .image-row {
+            img {
+                margin-left: 80px;
+
+                &:first-child {
+                    margin-left: 0;
+                }
+            }
+        }
+    }
+    .subheader {
+      margin: 30px auto 0 auto;
+      font-size: 18px;
+    }
+    .body-subheader {
+      margin: 30px auto 0 auto;
+      font-size: 16px;
+    }
+}
+
 .cta {
     //Use width instead of left/right padding so we can center the button easily
     //with margin auto
@@ -225,15 +263,6 @@ a:link {
             height: 1px;
             left: 0;
             bottom : -50px;
-        }
-    }
-    &.features-left {
-        &:before {
-            width: 50%;
-            left: 0;
-            margin: 0;
-            height: 1px;
-            bottom: 55%;
         }
     }
 }
