Translated over blog posts

--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -31,7 +31,7 @@
 													</a>
 												<% } %>
 											</div>
-											<div class="post-head small-screen-center">
+											<div class="post-head">
 												<h2 class="post-title"><a href="/blog/<%= blog.url %>"><%= blog.title %></a></h2>
 												<small class="post-author"><%= blog.author.name %></small>
 												<small class="post-date"><%= blog.date %></small>
