--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -22,6 +22,7 @@
     }
     .post-title {
         padding-top: 0;
+        font-size: 28px;
     }
     .post-showinfo {
         margin-left: 0;
@@ -63,7 +64,10 @@
         overflow-y: hidden;
         //Figure out how to get overlay working
         &.overlay {
-            background: rgba(0,0,0,0.07);
+            background: transparent;
+            &:hover {
+                background: rgba(0,0,0,0.75);
+            }
         }
         .feature-image {
             display: block;
