--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -17,6 +17,12 @@ p.features {
     color: @steel-dark;
 }
 
+.zopim {
+    left: 10px !important;
+    right: 0 !important;
+    bottom: 0 !important;
+}
+
 .text-left {
 	text-align: left !important;
 }
