--- a/views/company.ejs
+++ b/views/company.ejs
@@ -26,25 +26,72 @@
 				</div>
 				<div class="row">
 					<div class="col-md-9 center">
-						<div class="col-md-6">
-							<h3>Where We've Been...</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin ipsum ligula, a scelerisque mauris porttitor eget. Ut neque lorem, euismod ac dignissim ut, lacinia in neque. Pellentesque nec eros non lectus blandit rutrum placerat eget tortor. Maecenas at sem lorem.</p>
+						<div class="col-md-5">
+							<h3>Why We're Here...</h3>
+							<p>Roadmunk was built out of the founders frustration to create well designed roadmaps quickly for our stakeholders. We believed that software could replace spreadsheets and simplify the process of roadmapping to communicate our ongoing strategy.</p>
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-7">
 							<h3>And Where We're Headed</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin ipsum ligula, a scelerisque mauris porttitor eget. Ut neque lorem, euismod ac dignissim ut, lacinia in neque. Pellentesque nec eros non lectus blandit rutrum placerat eget tortor. Maecenas at sem lorem.</p>
+							<p>Over time we’ve learned that organizations build roadmaps of all shapes and sizes. Roadmaps can be created for sprint planning, projects, release planning, entire product life cycles and much more. Therefore, product roadmapping is not a one size fits all exercise and our goal became clear: to enable the creation of beautiful and insightful roadmaps quickly.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section class="section grey section-short landing-page">
+		<section class="section grey section-short has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<header class="section-header text-center underline">
+					<h1 class="headline text-large xsmall-margin-bottom hairline">Partners</h1>
+				</header>
+				<div class="row med-margin-bottom">
+					<div class="row">
+						<ul class="list-unstyled">
+							<li class="col-md-4 text-center">
+								<a href="http://www.bdc.ca/EN/Pages/home.aspx">
+									<img src="/images/bdc.png" width="150px">
+								</a>
+							</li>
+							<li class="col-md-4 text-center">
+								<a href="http://www.canrockventures.com/">
+									<img src="/images/canrock-ventures.png" width="150px">
+								</a>
+							</li>
+							<li class="col-md-4 text-center">
+								<a href="http://digitalmediazone.ryerson.ca/">
+									<img src="http://placehold.it/150x150" width="150px" height="150px" alt="Digital Media Zone">
+								</a>
+							</li>
+						</ul>
+					</div>
+					<div class="row">
+						<ul class="list-unstyled">
+							<li class="col-md-6 text-center">
+								<a href="http://www.communitech.ca/">
+									<img src="/images/communitech.png" width="300px">
+								</a>
+							</li>
+							<li class="col-md-6 text-center">
+								<a href="http://hyperdrive.communitech.ca/">
+									<img src="/images/hyperdrive.png" width="300px">
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="section white section-short">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
 				<header class="section-header text-center underline">
 					<h1 class="headline text-large hairline">Contact Us</h1>
 					<p>Feel free to ask us anything</p>
+					<p>
+						<a href="mailto:support@roadmunk.com?Subject=Contact">support@roadmunk.com</a>
+					</p>
 				</header>
 			</div>
 		</section>
