--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -36,3 +36,15 @@ $.src='//v2.zopim.com/?2GxMCMGRFtWEbHrnHUk8G3yrcSlXuyIK';z.t=+new Date;$.
 type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 </script>
 <!--End of Zopim Live Chat Script-->
+
+<!-- Google Anayltics -->
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-37519519-1', 'auto');
+ga('send', 'pageview');
+</script>
+<!-- End of Google Analytics Script -->
