Transfered over style guide and cleaned up it's javascript code

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,4 +1,4 @@
-<section class="section white-black section-short landing-page">
+<section class="section grey section-short landing-page">
 	<div class="background-media"></div>
 	<div class="background-overlay"></div>
 	<div class="container">
