--- a/views/company.ejs
+++ b/views/company.ejs
@@ -100,7 +100,10 @@
 				<div id="google-container"></div>
 				<div id="cd-zoom-in"></div>
 				<div id="cd-zoom-out"></div>
-				<address>c/o Digital Media Zone, 10 Dundas Street East, Suite 600, M5B 2G9</address>
+				<address>
+					<p>Based at the Digital Media Zone at Ryerson University, in the heart of downtown Toronto.</p>
+					<p>Roadmunk c/o Digital Media Zone, 10 Dundas Street East, Suite 600, M5B 2G9</p>
+				</address>
 			</section>
 		</section>
 	</article>
