--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -98,6 +98,9 @@
 			</a>
 		</div>
 		<div class="info-right">
+			<a class="dmz" href="http://digitalmediazone.ryerson.ca/">
+				<img src="/images/dmz-footer.png" alt="Digital Media Zone" height="22px">
+			</a>
 			<a href="mailto:support@roadmunk.com?Subject=Support%20Case" title="Support">support&#64;roadmunk.com</a>
 		</div>
 	</div>
