--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -1,4 +1,4 @@
-<script src="/vendor/jquery/dist/jquery.js"></script>
+<script src="/vendor/jquery/dist/jquery.min.js"></script>
 <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 
 <% if (content == "company") { %>
@@ -14,31 +14,35 @@
 	<!--<script src="/javascripts/home.js"></script>-->
 <% } else if (content == "pricing") { %>
 	<script src="/javascripts/pricing.js"></script>
+<% } else if (content == "security") { %> 
+	<script type="text/javascript">
+		var __dcid = __dcid || [];__dcid.push(["DigiCertClickID_YEnOGpoW", "10", "l", "black", "YEnOGpoW"]);(function(){var cid=document.createElement("script");cid.async=true;cid.src="//seal.digicert.com/seals/cascade/seal.min.js";var s = document.getElementsByTagName("script");var ls = s[(s.length - 1)];ls.parentNode.insertBefore(cid, ls.nextSibling);}());
+	</script>
 <% } %>
 
 <!-- Start of Async HubSpot Analytics Code -->
- <script type="text/javascript">
+<!-- <script type="text/javascript">
    (function(d,s,i,r) {
      if (d.getElementById(i)){return;}
      var n=d.createElement(s),e=d.getElementsByTagName(s)[0];
      n.id=i;n.src='//js.hs-analytics.net/analytics/'+(Math.ceil(new Date()/r)*r)+'/421277.js';
      e.parentNode.insertBefore(n, e);
    })(document,"script","hs-analytics",300000);
- </script>
+ </script>-->
 <!-- End of Async HubSpot Analytics Code -->
 
 <!--Start of Zopim Live Chat Script-->
-<script type="text/javascript">
+<!--<script type="text/javascript">
 window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
 d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
 _.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute('charset','utf-8');
 $.src='//v2.zopim.com/?2GxMCMGRFtWEbHrnHUk8G3yrcSlXuyIK';z.t=+new Date;$.
 type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
-</script>
+</script>-->
 <!--End of Zopim Live Chat Script-->
 
 <!-- Google Anayltics -->
-<script>
+<!--<script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -46,5 +50,5 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 ga('create', 'UA-37519519-1', 'auto');
 ga('send', 'pageview');
-</script>
+</script>-->
 <!-- End of Google Analytics Script -->
