--- a/views/security.ejs
+++ b/views/security.ejs
@@ -27,14 +27,27 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-9 center">
-						<h1 class="small-margin-bottom">We Are Proud Of Our Strict Security Practices, Which Include The Following&#58;</h1>
-						<ul class="security-points small-margin-bottom">
-							<li>Protecting your information with 128-bit TSL encryption</li>
-							<li>Industry best practices, including encryption in transit and at rest</li>
-							<li>Secure storage and backups</li>
-							<li>Strict internal access controls</li>
-						</ul>
-						<p>For more information, please refer to our <a href="http://roadmunk.com/privacypolicy">Privacy Policy</a> &#38; <a href="http://roadmunk.com/termsandconditions">Terms and Conditions</a>, or contact us at <a href="mailto:support@roadmunk.com?Subject=Support%20Case">support@roadmunk.com.</a></p>
+						<div class="row">
+							<h1 class="small-margin-bottom">We Are Proud Of Our Strict Security Practices, Which Include The Following&#58;</h1>
+						</div>
+						<div class="row">
+							<div class="col-md-9">
+								<ul class="security-points small-margin-bottom">
+									<li>Protecting your information with 128-bit TSL encryption</li>
+									<li>Industry best practices, including encryption in transit and at rest</li>
+									<li>Secure storage and backups</li>
+									<li>Strict internal access controls</li>
+								</ul>
+							</div>
+							<div class="col-md-3 digicert">
+								<div id="DigiCertClickID_YEnOGpoW" data-language="en_US">
+									<a href="https://www.digicert.com/ev-ssl-certification.htm"></a>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<p>For more information, please refer to our <a href="http://roadmunk.com/privacypolicy">Privacy Policy</a> &#38; <a href="http://roadmunk.com/termsandconditions">Terms and Conditions</a>, or contact us at <a href="mailto:support@roadmunk.com?Subject=Support%20Case">support@roadmunk.com.</a></p>
+						</div>
 					</div>
 				</div>
 			</div>
